force-app/main/default/objects/DemandanteEmpleo__c/DemandanteEmpleo__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para descartar candidatos que sean Demandantes de Empleo</description>
    <label>Demandante de empleo</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demandantes de empleo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>