force-app/main/default/objects/DemandanteEmpleo__c/fields/ContactadoRRHH__c.field-meta.xml
<CustomField>
    <fullName>ContactadoRRHH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactado RRHH</label>
    <type>Checkbox</type>
</CustomField>