force-app/main/default/objects/DemandanteEmpleo__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Apellidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>