force-app/main/default/objects/DemandanteEmpleo__c/fields/ObservacionesRRHH__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesRRHH__c</fullName>
    <label>Observaciones RRHH</label>
    <type>TextArea</type>
</CustomField>