force-app/main/default/objects/DemandanteEmpleo__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <description>Nos indica el origen proveniente de del demandante de empleo</description>
    <label>Origen</label>
    <type>TextArea</type>
</CustomField>