force-app/main/default/objects/DemandanteEmpleo__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>Móvil</label>
    <type>Phone</type>
</CustomField>